--- a/about.html
+++ b/about.html
@@ -45,9 +45,9 @@
   <section class="header">
     <div class="container">
       <div class="content">
-        <a href=ak.html><img class="avatar" src="img/me.jpg" srcset="img/me.jpg 1x"></a>
+        <a href=index.html><img class="avatar" src="img/me.jpg" srcset="img/me.jpg 1x"></a>
 
-          <a href="ak.html"><div class="name">Manoj Kumar</div></a>
+          <a href="index.html"><div class="name">Manoj Kumar</div></a>
 
                   <nav>
                    <ul>
