--- a/blog.html
+++ b/blog.html
@@ -51,7 +51,7 @@
 	<section class="header">
 	    <div class="container">
 	        <div class="content">
-						<a href=ak.html><img class="avatar" src="img/me.jpg" srcset="img/me.jpg 1x"></a>
+						<a href=index.html><img class="avatar" src="img/me.jpg" srcset="img/me.jpg 1x"></a>
 						<div class="mainheading">
 							<h1 class="sitetitle">Manoj's Blog</h1>
 							<p class="lead">
